# Moodlens

./: .gitignore  LICENSE  README.md
feature_pipeline/: pyproject.toml
feature_pipeline/feature_pipeline/: config.yml  notebook.ipynb  nt.ipynb  processing.py
feature_pipeline/feature_pipeline/apis/: main.py
feature_pipeline/feature_pipeline/data_store/feature_repo/: definitions.py  feature_store.yaml
feature_pipeline/feature_pipeline/data_store/feature_repo/data/: entity.parquet  financial_aspects.parquet  job_details.parquet  job_evaluation.parquet  online_store.db  registry.db  work_life.parquet
feature_pipeline/feature_pipeline/datasets/: sentiment_analysis.jsonl
feature_pipeline/feature_pipeline/datasource/: datasource.parquet
inference_pipeline/: docker-compose.yaml  pyproject.toml  requiements.txt  test.ipynb
inference_pipeline/inference_pipeline/: __init__.py  config.yml  main.py
inference_pipeline/inference_pipeline/api/: inference.py
inference_pipeline/inference_pipeline/config/: core.py
inference_pipeline/inference_pipeline/models/: huggingface_model.py
inference_pipeline/inference_pipeline/schemas/: inference.py
inference_pipeline/inference_pipeline/services/: sentimet_analysis.py  summarization.py  topic_modeling.py  utils.py
scripts/: run_bert_topic_training_pipeline.sh  run_feature_pipeline_ui.sh  run_inference_pipeline.sh
training_pipeline/sentiment_analysis/: pyproject.toml  requirements.txt
training_pipeline/sentiment_analysis/sentiment_analysis/: __init__.py  config.yml  metrics.py  models.py  predict.py  training.py
training_pipeline/sentiment_analysis/sentiment_analysis/config/: core.py
training_pipeline/sentiment_analysis/sentiment_analysis/datasets/: training.jsonl
training_pipeline/sentiment_analysis/sentiment_analysis/processing/: data_handling.py  data_processing.py
training_pipeline/text_summarization/: pyproject.toml
training_pipeline/topic_modeling/: bert_topic.ipynb  pyproject.toml  requirements.txt  test-training.ipynb
training_pipeline/topic_modeling/topic_modeling/: __init__.py  config.yml  notebook.ipynb  pipeline.py  training_pipeline.py
training_pipeline/topic_modeling/topic_modeling/config/: core.py
training_pipeline/topic_modeling/topic_modeling/processing/: data_handling.py  data_processing.py  utils.py
training_pipeline/topic_modeling/topic_modeling/trained_model/: bert_topic_modeling_v0.0.0
