[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Duong Trong Chi <duongchi68389@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
datasets = "^2.21.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
