[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["chiduong <duongchi68389@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feast = "^0.40.1"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
