[tool.poetry]
name = "inference-pipeline"
version = "0.1.0"
description = ""
authors = ["chiduong <duongchi68389@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
