[tool.poetry]
name = "inference-pipeline"
version = "0.1.0"
description = ""
authors = ["chiduong <duongchi68389@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.3"
fastapi = "^0.115.3"
gunicorn = "23.0.0"
uvicorn = "0.31.0"
strictyaml = "1.7.3"
python-dotenv = "^1.0.1"
feast = "^0.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
