[tool.poetry]
name = "sentiment-analysi"
version = "0.1.0"
description = ""
authors = ["Duong Trong Chi <duongchi68389@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
strictyaml = "^1.7.3"
pydantic = "^2.8.2"
transformers = "^4.44.2"
peft = "^0.12.0"
datasets = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
